--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -42,10 +42,8 @@
   "Assignments": "कार्य",
   "Back": "वापस",
   "Backgrounds": "पृष्ठभूमि",
-  "Background Collection": "पृष्ठभूमि संग्रह",
-  "Background\nCollection": "पृष्ठभूमि संग्रह",
-  "Badges Collection": "बैज संग्रह",
-  "Badges\nCollection": "बैज संग्रह",
+  "Challenge Badges": "चुनौती बैज",
+  "Challenge\nBadges": "चुनौती बैज",
   "Begin Quiz": "प्रश्नोत्तरी शुरू करें",
   "Beth has 13 flowers in her garden. Kate has 8 flowers. How many more flowers does Beth have than Kate?": "भीम के बगीचे में 13 फूल हैं।\nकीर्ति केबगीचे में 8 फूल हैं।\nकीर्ति की तुलना में भीम के पास और कितने ज्यादा फूल हैं?",
   "Billy has 2 marbles. Audrey has 3 more marbles than Billy. How many marbles does Audrey have?": "बाला के पास 2 मार्बल हैं।\nआर्यन के पास बाला से 3 अधिक मार्बल हैं।\nआर्यन के पास कितने मार्बल हैं?",
@@ -76,10 +74,9 @@
   "Count and Pair": "गणना",
   "cube": "घनक्षेत्र",
   "cylinder": "सिलेंडर",
-  "Character Modification": "चरित्र संशोधन",
-  "Character\nModification": "चरित्र संशोधन",
+  "Characters": "पात्र",
   "David and his friends fly 9 kites. Some kites get stuck in a tree. 6 kites are still flying. How many kites are stuck in the tree?": "ध्रुव और उसके दोस्त 9 पतंग उड़ाते हैं।\nकुछ पतंग एक पेड़ में फंस जाती हैं।\n6 पतंगें अभी भी उड़ रही हैं।\nपेड़ में कितनी पतंगें अटकी हैं?",
-  "Dairy Rewards": "डेयरी पुरस्कार",
+  "Rewards Diary": "उपहार डायरी",
   "Deanna has 5 more puzzles than Fatou. Fatou has 3 puzzles. How many puzzles does Deanna have?": "एक फुटबॉल टीम ने पहले हाफ में 3 गोल किए।\nफिर उन्होंने दूसरे हाफ में अधिक गोल किए।\nउन्होंने 5 गोल से गेम जीता! दूसरे हाफ में उन्होंने कितने गोल किए?",
   "Diego has 11 mangos in a basket. Diego gives 4 mangos to his sister. How many mangos are left in the basket?": "धीर के पास एक टोकरी में 11 आम होते हैं।\nधीर अपनी बहन को 4 आम देता है।\nटोकरी में कितने आम बचे हैं?",
   "Division": "विभाजन",
@@ -101,7 +98,7 @@
   "five": "पांच",
   "Follow Us": "हमें फॉलो करें",
   "four": "चार",
-  "Fun Game\nActivity": "मजेदार खेल\nगतिविधि",
+  "Character\nRolling": "पात्र लुढ़कना",
   "Fred is 12 years old. His brother Tom is 8 years old. How much younger is Tom than Fred?": "फैजल 12 साल का है।\nउसका भाई तुषार 8 साल का है।\nतुषार फैजल से कितना छोटा है?",
   "Friends": "पात्र",
   "Featured": "प्रदर्शित",
@@ -241,7 +238,7 @@
   "Stringed objects": "आकार की माला",
   "Story\nReading": "कहानी पढ़ना",
   "Sticker Books": "स्टिकर पुस्तकें",
-  "Sticker\nPainting": "स्टिकर पेंटिंग",
+  "Stickers\n&\nPainting": "स्टिकर और चित्रकारी",
   "Succession in Shapes": "आकार आयोजन",
   "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": "सौम्या को समुद्र तट पर 20 केकड़े मिले।\nनादिर को 6 केकड़े मिले।\nसौम्या को नादिर की तुलना में कितने अधिक केकड़े मिले?",
   "tables": "टेबल",
