Show connect dialog for home mode and login fail

--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -65,6 +65,7 @@
   "Class  :": "वर्ग  :",
   "Click x1 times on number x2!": "नंबर x2 पर x1 बार क्लिक करें!",
   "cone": "शंकु",
+  "code is invalid or expired" : "कोड अमान्य या समाप्त हो गया है",
   "Confirm": "पुष्टि करें",
   "Connected": "जुड़े हुए",
   "Contact Us": "हमसे संपर्क करें",
@@ -86,12 +87,14 @@
   "Digital Skills": "डिजिटल कौशल",
   "Done": "हुआ",
   "Do you want to open now?": "क्या आप अभी खोलना चाहते हैं?",
+  "Do you want to connect now?": "क्या आप अभी जुड़ना चाहते हैं?",
   "eggs": "अंडे",
   "eight": "आठ",
   "Email :": "ईमेल :",
   "Email": "ईमेल",
   "English": "अंग्रेज़ी",
   "Enter the 6-digit OTP here...": "यहाँ 6-अंकीय ओटीपी दर्ज करें ...",
+  "Enter Phone Number here...": "यहां फोन नंबर दर्ज करें...",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "अर्जुन 5 पेपर के हवाई जहाज बनाता है।\nनयना 14 पेपर के हवाई जहाज बनाती है।\nअर्जुन नयना की तुलना में कितने कम हवाई जहाज बनाता है?",
   "Error downloading content. Please connect to internet and try again": "सामग्री डाउनलोड करने में त्रुटि। कृपया इंटरनेट से कनेक्ट करें और पुनः प्रयास करें",
   "EXIT ?": "बाहर जाएं ?",
@@ -154,6 +157,7 @@
   "Login to your school": "अपने स्कूल में लॉगिन करें",
   "Logout": "लॉग आउट",
   "Remember logged in user": "लॉग इन उपयोगकर्ता याद रखें",
+  "Re-Connect to your class using phone number": "फ़ोन नंबर का उपयोग करके अपनी कक्षा से पुनः कनेक्ट करें",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?": "लतिका के पास 8 पेंसिल हैं।\nवह उनमें से 7 पेंसिल खो देती है।\nलतिका के पास कितने पेंसिल बचे हैं?",
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?": "लतिका 9 साल की है।\nउसकी बहन जूली  6 साल की है।\nलतिका अपनी बहन जूली से कितनी बड़ी है?",
   "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?": "मीना ने 8 कैंडी खरीदी और जय ने 9 कैंडी खरीदी।\nउन्होंने सभी में कितने कैंडी खरीदे?",
@@ -203,6 +207,7 @@
   "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?": "प्रतीक के पास 4 मार्बल हैं।\nशमीन प्रतीक को कुछ मार्बल देता है और अब उसके पास 6 मार्बल बाकी हैं।\nशामीन ने प्रतीक को कितने मार्बल दिए थे?",
   "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "प्रतिक ने भोजन से पहले किताब के 6 पन्ने पढ़े।\nभोजन के बाद उन्होंने कुछ और पन्ने पढ़ा।\nअगर प्रतिक कुल मिलाकर 9 पन्ने पढ़ते हैं  तो भोजन के बाद उन्होंने कितने पन्ने पढ़े?",
   "Phone number :": "फ़ोन नंबर :",
+  "Phone number is already used": "फ़ोन नंबर का पहले ही उपयोग किया जा चुका है",
   "Profile": "प्रोफ़ाइल",
   "Puzzle": "क्रम में रखे",
   "Rectangle": "आयत",
@@ -231,6 +236,7 @@
   "Shelby earns star stickers when she does math at school. Yesterday, Shelby earned 4 stars. Today, she earned 3 more. How many stars did Shelby earn in all?": "जब सारा स्कूल में गणित करती है तो वह स्टार स्टिकर कमाती है।\nकल सारा ने 4 स्टार कमाए।\nआज उसने 3 और स्टार कमाए।\nसारा ने कितने स्टार कमाए?",
   "Shelly bought 4 boxes of donuts. Each box contains 5 donuts. How many donuts did she buy altogether?": "शेल्ली ने बर्फी के 4 बक्से खरीदे।\nप्रत्येक बक्से में 5 बर्फी होते हैं।\nउसने कुल कितने बर्फी खरीदे?",
   "six": "छह",
+  "Something Went Wrong, Please Try Again": "कुछ गलत हो गया, कृपया फिर से प्रयास करें",
   "Some mangos were in the basket. 4 mangos were taken from the basket. Now there are 6 mangos. How many mangos were in the basket before they were taken?": "कुछ आम टोकरी में थे।\nटोकरी से 4 आम निकाले गए थे।\nअब 6 आम बचे हैं।\nटोकरी में शुरूआत में कितने आम थे?",
   "Soumya's chicken laid 6 eggs yesterday. Today, her chicken laid 5 more eggs than yesterday. How many eggs did her chicken lay today?": "कोमल के मुर्गे ने कल 6 अंडे दिए थे।\nआज उसके मुर्गे ने कल की तुलना में 5 और अंडे दिए हैं।\nआज उसके अंडे कितने अंडे देने थे?",
   "Sound :": "ध्वनि :",
@@ -307,6 +313,7 @@
   "You and your sister share 10 bags of chips equally. How many bags of chips will each of you get?": "आप और आपकी बहन समान रूप से चिप्स के 10 बैग बांटते हैं।\nचिप्स के कितने बैग प्रत्येक को मिलेंगे?",
   "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": "आपके पास 7 गुब्बारे हैं और आपके मित्र के पास 5 गुब्बारे हैं।\nआपके मित्र के तुलना में आपके पास और कितने गुब्बारे हैं?",
   "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?": "आपके पास कुछ स्टांप हैं।\nआपका भाई आपको 6 स्टांप देता है।\nअब आपके पास 10 स्टांप हैं।\nआपने कितने स्टांप के साथ शुरुआत की?",
+  "Your class code is expired": "आपका वर्ग कोड समाप्त हो गया है",
   "Zach has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?": "ज़ाकिर के 17 जन्मदिन उपहार हैं।\n9 तोहफे उसके परिवार के तरफ से हैं और बाकी उसके दोस्तों दी हैं।\nउसके दोस्तों के तरफ से कितने उपहार हैं?",
   "zero": "शून्य"
 }
