--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -65,11 +65,13 @@
     "circle": "ವೃತ್ತ",
     "Click x1 times on number x2!": "x2 ನಲ್ಲಿ x1 ಬಾರಿ ಕ್ಲಿಕ್ ಮಾಡಿ!",
     "cone": "ಕೋನ್",
+    "code is invalid or expired": "ಕೋಡ್ ಅಮಾನ್ಯವಾಗಿದೆ ಅಥವಾ ಅವಧಿ ಮೀರಿದೆ",
     "Confirm": "ದೃಢೀಕರಿಸಿ",
     "Connected": "ಸಂಪರ್ಕಗೊಂಡಿದೆ",
     "Contact Us": "ನಮ್ಮನ್ನು ಸಂಪರ್ಕಿಸಿ",
     "Contact": "ಸಂಪರ್ಕ",
     "Connected To Class": "ತರಗತಿಗೆ ಸಂಪರ್ಕಿಸಲಾಗಿದೆ",
+    "Connect To Class": "ವರ್ಗಕ್ಕೆ ಸಂಪರ್ಕಪಡಿಸಿ",
     "Continue": "ಮುಂದುವರಿಸು",
     "Count and Match": "ಎಣಿಕೆ ಮತ್ತು ಹೊಂದಾಣಿಕೆ",
     "Count and Pair": "ಎಣಿಕೆ ಮತ್ತು ಜೋಡಿ",
@@ -86,11 +88,13 @@
     "Digital Skills": "ಡಿಜಿಟಲ್",
     "Done": "ಮುಗಿದಿದೆ",
     "Do you want to open now?": "ನೀವು ಈಗ ತೆರೆಯಲು ಬಯಸುವಿರಾ?",
+    "Do you want to connect now?": "ನೀವು ಈಗ ಸಂಪರ್ಕಿಸಲು ಬಯಸುವಿರಾ?",
     "eggs": "ಮೊಟ್ಟೆಗಳು",
     "eight": "ಎಂಟು",
     "Email :": "ಇಮೇಲ್:",
     "Email": "ಸಮ",
     "English": "ಆಂಗ್ಲ",
+    "Enter Phone Number here...": "ಇಲ್ಲಿ ಫೋನ್ ಸಂಖ್ಯೆಯನ್ನು ನಮೂದಿಸಿ...",
     "Enter the 6-digit OTP here...": "ಇಲ್ಲಿ 6-ಅಂಕಿಯ ಒಟಿಪಿ ಅನ್ನು ನಮೂದಿಸಿ ...",
     "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "ಅರ್ನೆಸ್ಟ್ 5 ಕಾಗದದ ವಿಮಾನಗಳನ್ನು ಮಾಡುತ್ತಾನೆ. ನಿಕೋಲ್ 14 ಕಾಗದದ ವಿಮಾನಗಳನ್ನು ಮಾಡುತ್ತಾನೆ. ನಿಕೋಲ್ಗಿಂತ ಎಷ್ಟು ಕಡಿಮೆ ಕಾಗದದ ವಿಮಾನಗಳು ಎರ್ನೆಸ್ಟ್ ಮಾಡುತ್ತಾನೆ?",
     "Error downloading content. Please connect to internet and try again": "ವಿಷಯವನ್ನು ಡೌನ್ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ. ದಯವಿಟ್ಟು ಇಂಟರ್ನೆಟ್ಗೆ ಸಂಪರ್ಕಪಡಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
@@ -202,9 +206,11 @@
     "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?": "ಪೀಟರ್ ಬಳಿ 4 ಪೆನ್ಸಿಲ್ ಇದೆ. ಥಾಮಸ್ ಅವನಿಗೆ ಕೆಲವು ಪೆನ್ಸಿಲ್ ಕೊಡುತ್ತಾನೆ . ಈಗ ಅವನ ಬಳಿ 6 ಪೆನ್ಸಿಲ್ ಇದೆ . ಥಾಮಸ್ ಪೀಟರ್ ಗೆ  ಎಷ್ಟು ಪೆನ್ಸಿಲ್ ಕೊಟ್ಟನು ?",
     "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "ಊಟಕ್ಕೆ ಮುಂಚೆ ಪೀಟರ್ ತನ್ನ ಪುಸ್ತಕದ 6 ಪುಟಗಳನ್ನು  ಓದುತ್ತಾನೆ .ಊಟದ ನಂತರ ಅವನು  ಸ್ವಲ್ಪ ಹೆಚ್ಚು ಓದುತ್ತಾನೆ .ಪೀಟರ್ ಎಲ್ಲಾ ಸೇರಿ 9 ಪುಟಗಳನ್ನು ಓದಿದಲ್ಲಿ, ಊಟದ ನಂತರ ಅವನು ಎಷ್ಟು ಪುಟಗಳನ್ನು ಓದಿದನು?",
     "Phone number :": "ದೂರವಾಣಿ ಸಂಖ್ಯೆ :",
+    "Phone number is already used": "ಫೋನ್ ಸಂಖ್ಯೆಯನ್ನು ಈಗಾಗಲೇ ಬಳಸಲಾಗಿದೆ",
     "Profile": "ವಿವರ",
     "Puzzle": "ಪಜಲ್",
     "Rectangle": "ಆಯಾತ",
+    "Re-Connect to your class using phone number": "ಫೋನ್ ಸಂಖ್ಯೆಯನ್ನು ಬಳಸಿಕೊಂಡು ನಿಮ್ಮ ತರಗತಿಗೆ ಮರು-ಸಂಪರ್ಕಿಸಿ",
     "Remove Teacher?": "ಶಿಕ್ಷಕನನ್ನು ತೆಗೆದುಹಾಕಿ?",
     "Remove User?": "ಬಳಕೆದಾರನನ್ನು ತೆಗೆದುಹಾಕಿ?",
     "Report": "ವರದಿ",
@@ -232,6 +238,7 @@
     "Shelly bought 4 boxes of donuts. Each box contains 5 donuts. How many donuts did she buy altogether?": "ಶೆಲ್ಲಿ 4  ಡೋನಟ್  ಪೆಟ್ಟಿಗೆಗಳನ್ನು ಖರೀದಿಸಿದಳು .ಪ್ರತಿ ಪೆಟ್ಟಿಗೆಯಲ್ಲಿ 5 ಡೋನಟ್  ಇದೆ.ಎಷ್ಟು  ಡೊನುಟ್ಸ್  ಅವರು ಒಟ್ಟಾರೆಯಾಗಿ ಖರೀದಿಸಿದಳು ?",
     "six": "ಆರು",
     "Some mangos were in the basket. 4 mangos were taken from the basket. Now there are 6 mangos. How many mangos were in the basket before they were taken?": "ಕೆಲವು ಮಾವಿನಹಣ್ಣುಗಳು  ಬುಟ್ಟಿಯಲ್ಲಿದ್ದವು .4 ಮಾವಿನಹಣ್ಣುಗಳನ್ನು  ಬುಟ್ಟಿಯಿಂದ ತೆಗೆದುಕೊಳ್ಳಲಾಗಿದೆ.ಈಗ ಬುಟ್ಟಿಯಲ್ಲಿ  6  ಮಾವಿನಹಣ್ಣುಗಳಿವೆ .ಅವರು ತೆಗೆದುಕೊಳ್ಳುವ ಮೊದಲು ಎಷ್ಟು ಮಾವಿನಹಣ್ಣುಗಳು  ಬುಟ್ಟಿಯಲ್ಲಿದ್ದವು ?",
+    "Something Went Wrong, Please Try Again": "ಏನೋ ತಪ್ಪಾಗಿದೆ, ದಯವಿಟ್ಟು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
     "Soumya's chicken laid 6 eggs yesterday. Today, her chicken laid 5 more eggs than yesterday. How many eggs did her chicken lay today?": "ಸೌಮ್ಯಳ ಕೋಳಿ  ನಿನ್ನೆ 6 ಮೊಟ್ಟೆಗಳು ಹಾಕಿತು.ಇಂದು, ಅವಳ ಕೋಳಿ   ನಿನ್ನೆಗಿಂತ 5 ಮೊಟ್ಟೆಗಳು  ಜಾಸ್ತಿ  ಹಾಕಿತು.ಅವಳ ಕೋಳಿ  ಇಂದು ಎಷ್ಟು ಮೊಟ್ಟೆಗಳು ಹಾಕಿತು?",
     "Sound :": "ಧ್ವನಿ:",
     "sphere": "ಗೋಳ",
@@ -306,6 +313,7 @@
     "You and your sister share 10 bags of chips equally. How many bags of chips will each of you get?": "ನೀವು ಮತ್ತು ನಿಮ್ಮ ಸಹೋದರಿ 10  ಚಾಕಲೇಟ್ಅನ್ನು  ಸಮಾನವಾಗಿ ಹಂಚಿಕೊಳ್ಳುತ್ತೀರಿ. ನಿಮ್ಮ ಬಳಿ ಎಷ್ಟು ಈಗ ಎಷ್ಟು  ಚಾಕಲೇಟ್ ಇದೆ?",
     "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": "ನಿಮ್ಮ ಬಳಿ  7 ಬಲೂನ್ ಗಳಿವೆ ಹಾಗು ನಿಮ್ಮ ಗೆಳೆಯನ ಬಳಿ 5 ಬಲೂನ್ ಗಳಿವೆ. ನಿಮ್ಮ ಗೆಳೆಯನಿಗಿಂತ ನಿಮ್ಮ ಬಳಿ ಎಷ್ಟು ಬಲೂನ್ ಜಾಸ್ತಿ ಇದೆ?",
     "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?": "ನಿಮ್ಮ ಬಳಿ ಕೆಲವು ನಾಣ್ಯಗಳಿವೆ. ನಿಮ್ಮ ಸಹೋದರ ನಿಮಗೆ 6 ನಾಣ್ಯವನ್ನು ಕೊಡುತ್ತಾನೆ. ಈಗ ನಿಮ್ಮ ಬಳಿ 10 ನಾಣ್ಯಗಳಿವೆ?",
+    "Your class code is expired": "ನಿಮ್ಮ ವರ್ಗ ಕೋಡ್ ಅವಧಿ ಮೀರಿದೆ",
     "Zach has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?": "ಝಾಕ್ 17 ಹುಟ್ಟುಹಬ್ಬದ ಉಡುಗೊರೆಗಳನ್ನು ಹೊಂದಿದ್ದಾರೆ.9 ಉಡುಗೊರೆಗಳು ಅವನ ಕುಟುಂಬದಿಂದ ಬಂದವು ಮತ್ತು ಉಳಿದವುಗಳು ಅವನ ಸ್ನೇಹಿತರಿಂದ ಬಂದವು.ಅವನ ಸ್ನೇಹಿತರಿಂದ ಎಷ್ಟು ಉಡುಗೊರೆಗಳಿವೆ?",
     "zero": "ಶೂನ್ಯ"
 }
