--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -65,11 +65,13 @@
   "circle": "वर्तुळ",
   "Click x1 times on number x2!": " नंबर x2 वर x1 एवढा  वेळा क्लिक करा.",
   "cone": "सुळका ",
+  "code is invalid or expired": "कोड अवैध किंवा कालबाह्य आहे",
   "Confirm": "ठाम",
   "Connected": "जोडलेले",
   "Contact Us": "आमच्याशी संपर्क साधा ",
   "Contact": "संपर्क",
   "Connected To Class": "वर्गाशी जोडलेले",
+  "Connect To Class": "वर्गाशी कनेक्ट करा",
   "Continue": "चालू ",
   "Count and Match": "मोजा आणि जुळवा",
   "Count and Pair": "मोजा आणि जोडा",
@@ -85,12 +87,14 @@
   "Digital Skills": " डिजिटल कौशले",
   "Done": "पूर्ण",
   "Do you want to open now?": " तुम्हाला आत्ता हे उघडायचे आहे?",
+  "Do you want to connect now?": "आपण आता कनेक्ट करू इच्छिता?",
   "eggs": "अंडे",
   "eight": "आठ",
   "Email :": "ई-मेल :",
   "Email": "ई-मेल",
   "English": "इंग्रजी",
   "Enter the 6-digit OTP here...": " सहा आकड्यांचा ओटीपी इथे लिहा......",
+  "Enter Phone Number here...": "येथे फोन नंबर टाका...",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "हरीशने ५ कागदी विमान बनवले. नरेशने १४ कागदी विमान बनवले. नरेशच्या तुलनेत हरीशने किती कागदी विमान कमी बनवले?",
   "Error downloading content. Please connect to internet and try again": " त्रुटिजन्य सामग्री. आंतरजाला शी संबंध जोडा आणि पुन्हा प्रयत्न करा.",
   "EXIT ?": "समाप्त ?",
@@ -198,9 +202,11 @@
   "Peter has 4 marbles. Sue gives Peter some marbles and now he has 6 marbles in all. How many marbles did Sue give Peter?": "प्रकाश कडे ४ गोट्या आहेत. साक्षीने काही गोट्या प्रकाशला दिल्या, आता प्रकाश जवळ एकूण ६ गोट्या आहेत. साक्षीने एकूण किती गोट्या प्रकाशला दिल्या?",
   "Peter read 6 pages of his book before lunch. After lunch he read some more. If Peter read 9 pages in all, how many pages did he read after lunch?": "त्याने दुपारच्या जेवणानंतर किती पाने वाचली?",
   "Phone number :": "दूरध्वनी क्र.",
+  "Phone number is already used": "फोन नंबर आधीच वापरला आहे",
   "Profile": "पार्श्विका ",
   "Puzzle": "कोडे",
   "Rectangle": "आयत",
+  "Re-Connect to your class using phone number": "फोन नंबर वापरून तुमच्या वर्गाशी पुन्हा कनेक्ट करा",
   "Remove Teacher?": "शिक्षकांना काढू इच्छिता?",
   "Remove User?": "उपभोक्त्याला काढू इच्छिता ?",
   "Report": "अहवाल",
@@ -226,6 +232,7 @@
   "Shelby earns star stickers when she does math at school. Yesterday, Shelby earned 4 stars. Today, she earned 3 more. How many stars did Shelby earn in all?": "शेल्बीला ४ तारे मिळाले . आज",
   "Shelly bought 4 boxes of donuts. Each box contains 5 donuts. How many donuts did she buy altogether?": " शैलीने  लाडूचे चार बॉक्स विकत घेतले. प्रत्येक बॉक्समध्ये 5 लाडू आहेत. तर तिने एकूण किती लाडू विकत घेतले?",
   "six": "सहा",
+  "Something Went Wrong, Please Try Again": "काहीतरी चूक झाली, कृपया पुन्हा प्रयत्न करा",
   "Some mangos were in the basket. 4 mangos were taken from the basket. Now there are 6 mangos. How many mangos were in the basket before they were taken?": " बास्केट मध्ये  काही आंबे होते. बास्केट मधून चार आंबे  घेतले गेले. आता तिथे सहा आंबे आहेत. बास्केट मधून आंबे काढून घेण्याआधी त्याच्यात  किती आंबे होते?",
   "Soumya's chicken laid 6 eggs yesterday. Today, her chicken laid 5 more eggs than yesterday. How many eggs did her chicken lay today?": "तिच्या कोंबडीने काल पेक्षा पाच जास्त अंडी दिल्ली.  तर तिच्या कोंबडीने आज किती अंडी दिली?",
   "Sound :": "आवाज:",
@@ -297,6 +304,7 @@
   "Which is the biggest?": "यातलं सर्वात मोठं कोणतं ? ",
   "Write here": "इथे लिहा",
   "Yesterday, the store had 7 bags of rice. Today, the store has 2 bags of rice. How many bags of rice did the store sell?": " दुकानात  सात तांदळाच्या गोण्या होत्या.  आज",
+  "Your class code is expired": "तुमचा वर्ग कोड कालबाह्य झाला आहे",
   "You and your sister share 10 bags of chips equally. How many bags of chips will each of you get?": " तू आणि तुझ्या बहिणीने 10 चिप्सच्या पिशव्या एकसमान वाटून घेतल्या.  तर प्रत्येकीच्या वाट्याला किती पिशव्या आल्या?",
   "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": " तुझ्याकडे सात फुगे आहेत आणि तुझ्या मित्राकडे 5 फुगे आहेत.  तर तुझ्याकडे तुझ्या मित्रापेक्षा किती जास्त  फुगे आहेत ?",
   "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?": " तुझ्याकडे काही शिक्के आहेत.  तुझ्या भावाने तुला  सहा अजून  शिके दिले.  आता तुझ्याकडे दहा शिक्के आहेत.  तर सुरुवातीला तुझ्याकडे किती शिक्के होते ?",
