Changed phone number to ID

--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -94,7 +94,7 @@
   "Email": "ई-मेल",
   "English": "इंग्रजी",
   "Enter the 6-digit OTP here...": " सहा आकड्यांचा ओटीपी इथे लिहा......",
-  "Enter Phone Number here...": "येथे फोन नंबर टाका...",
+  "Enter ID here...": "येथे आयडी प्रविष्ट करा...",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "हरीशने ५ कागदी विमान बनवले. नरेशने १४ कागदी विमान बनवले. नरेशच्या तुलनेत हरीशने किती कागदी विमान कमी बनवले?",
   "Error downloading content. Please connect to internet and try again": " त्रुटिजन्य सामग्री. आंतरजाला शी संबंध जोडा आणि पुन्हा प्रयत्न करा.",
   "EXIT ?": "समाप्त ?",
