--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -84,7 +84,7 @@
   "Email": "Email",
   "English": "English",
   "Enter the 6-digit OTP here...": "Enter the 6-digit OTP here...",
-  "Enter Phone Number here...": "Enter Phone Number here...",
+  "Enter ID here...": "Enter ID here...",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "Harish makes 5 paper airplanes. Naresh makes 14 paper airplanes. How many fewer paper airplanes does Harish make than Naresh?",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "EXIT ?": "EXIT ?",
