Updated Default text in leaderboard

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -38,7 +38,7 @@
   "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?": "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?",
   "App Language :": "App Language :",
   "apples": "apples",
-  "Ask your teacher for the class code and enter it there": "Ask your teacher for the class code and enter it there",
+  "Please enter the details shared by your teacher below:": "Please enter the details shared by your teacher below:",
   "Backgrounds": "Backgrounds",
   "Back": "Back",
   "Begin Quiz": "Begin Quiz",
@@ -83,8 +83,8 @@
   "Email :": "Email :",
   "Email": "Email",
   "English": "English",
-  "Enter the 6-digit OTP here...": "Enter the 6-digit OTP here...",
-  "Enter ID here...": "Enter ID here...",
+  "Enter the class code here": "Enter the class code here",
+  "Enter Student ID here": "Enter Student ID here",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "Harish makes 5 paper airplanes. Naresh makes 14 paper airplanes. How many fewer paper airplanes does Harish make than Naresh?",
   "Error downloading content. Please connect to internet and try again": "Error downloading content. Please connect to internet and try again",
   "EXIT ?": "EXIT ?",
