--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -38,7 +38,7 @@
   "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?": "अन्ना ने 12 पौधे खरीदे।\nउसकी बहन ने 7 पौधे खरीदे।\nअन्ना ने अपनी बहन से कितने अधिक पौधे खरीदे?",
   "App Language :": "ऐप भाषा :",
   "apples": "सेब",
-  "Ask your teacher for the class code and enter it there": "अपने शिक्षक से कक्षा कोड मांगें और उसे वहां दर्ज करें",
+  "Please enter the details shared by your teacher below:": "कृपया नीचे अपने शिक्षक द्वारा दिए गए विवरण को दर्ज करें:",
   "Assignments": "कार्य",
   "Back": "वापस",
   "Backgrounds": "पृष्ठभूमि",
@@ -93,8 +93,8 @@
   "Email :": "ईमेल :",
   "Email": "ईमेल",
   "English": "अंग्रेज़ी",
-  "Enter the 6-digit OTP here...": "यहाँ 6-अंकीय ओटीपी दर्ज करें ...",
-  "Enter ID here...": "यहां आईडी डालें...",
+  "Enter the class code here": "यहां कक्षा कोड दर्ज करें",
+  "Enter Student ID here": "यहां छात्र आईडी दर्ज करें",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "अर्जुन 5 पेपर के हवाई जहाज बनाता है।\nनयना 14 पेपर के हवाई जहाज बनाती है।\nअर्जुन नयना की तुलना में कितने कम हवाई जहाज बनाता है?",
   "Error downloading content. Please connect to internet and try again": "सामग्री डाउनलोड करने में त्रुटि। कृपया इंटरनेट से कनेक्ट करें और पुनः प्रयास करें",
   "EXIT ?": "बाहर जाएं ?",
