--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -38,7 +38,7 @@
     "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?": "ಗೋಪಿ 12 ಸಸ್ಯಗಳನ್ನು ಖರೀದಿಸಿದನು .ಅವನ ಸಹೋದರಿ 7 ಸಸ್ಯಗಳನ್ನು ಖರೀದಿಸಿದಳು .ತನ್ನ ಸಹೋದರಿಗಿಂತ ಗೋಪಿಯ ಬಳಿ ಎಷ್ಟು ಸಸ್ಯಗಳು ಜಾಸ್ತಿ ಇದ್ದವು ?",
     "App Language :": "ಅಪ್ಲಿಕೇಶನ್ ಭಾಷೆ:",
     "apples": "ಸೇಬು",
-    "Ask your teacher for the class code and enter it there": "ತರಗತಿ ಕೋಡ್‌ಗಾಗಿ ನಿಮ್ಮ ಶಿಕ್ಷಕರನ್ನು ಕೇಳಿ ಮತ್ತು ಅದನ್ನು ಅಲ್ಲಿ ನಮೂದಿಸಿ",
+    "Please enter the details shared by your teacher below:": "ನಿಮ್ಮ ಶಿಕ್ಷಕರು ಹಂಚಿಕೊಂಡಿರುವ ವಿವರಗಳನ್ನು ಕೆಳಗೆ ನಮೂದಿಸಿ:",
     "Assignments": "ನಿಯೋಜನೆ",
     "Backgrounds": "ಹಿನ್ನೆಲೆಗಳು",
     "Background Collection": "ಹಿನ್ನೆಲೆ ಸಂಗ್ರಹ",
@@ -94,8 +94,8 @@
     "Email :": "ಇಮೇಲ್:",
     "Email": "ಸಮ",
     "English": "ಆಂಗ್ಲ",
-    "Enter ID here...": "ಐಡಿಯನ್ನು ಇಲ್ಲಿ ನಮೂದಿಸಿ...",
-    "Enter the 6-digit OTP here...": "ಇಲ್ಲಿ 6-ಅಂಕಿಯ ಒಟಿಪಿ ಅನ್ನು ನಮೂದಿಸಿ ...",
+    "Enter Student ID here": "ಇಲ್ಲಿ ವಿದ್ಯಾರ್ಥಿ ID ನಮೂದಿಸಿ",
+    "Enter the class code here": "ವರ್ಗ ಕೋಡ್ ಅನ್ನು ಇಲ್ಲಿ ನಮೂದಿಸಿ",
     "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "ಅರ್ನೆಸ್ಟ್ 5 ಕಾಗದದ ವಿಮಾನಗಳನ್ನು ಮಾಡುತ್ತಾನೆ. ನಿಕೋಲ್ 14 ಕಾಗದದ ವಿಮಾನಗಳನ್ನು ಮಾಡುತ್ತಾನೆ. ನಿಕೋಲ್ಗಿಂತ ಎಷ್ಟು ಕಡಿಮೆ ಕಾಗದದ ವಿಮಾನಗಳು ಎರ್ನೆಸ್ಟ್ ಮಾಡುತ್ತಾನೆ?",
     "Error downloading content. Please connect to internet and try again": "ವಿಷಯವನ್ನು ಡೌನ್ಲೋಡ್ ಮಾಡಲು ಸಾಧ್ಯವಿಲ್ಲ. ದಯವಿಟ್ಟು ಇಂಟರ್ನೆಟ್ಗೆ ಸಂಪರ್ಕಪಡಿಸಿ ಮತ್ತು ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
     "EXIT ?": "ನಿರ್ಗಮಿಸಿ?",
