--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -38,7 +38,7 @@
   "Anna bought 12 plants. Her sister bought 7 plants. How many more plants did Anna buy than her sister?": "अण्णाने १२ रोपटे विकत घेतली. त्याच्या बहिणीने ७ रोपटे विकत घेतली. अण्णाने त्याच्या बहिणीच्या तुलनेत किती रोपे जास्त विकत घेतली?",
   "App Language :": " ॲपची  भाषा :",
   "apples": "सफरचंदं",
-  "Ask your teacher for the class code and enter it there": "तुमच्या शिक्षकांना वर्ग कोड विचारा आणि तो तेथे एंटर करा",
+  "Please enter the details shared by your teacher below:": "कृपया खाली तुमच्या शिक्षकाने शेअर केलेले तपशील एंटर करा:",
   "Assignments": "असाइनमेंट",
   "Backgrounds": "पार्श्वभाग",
   "Background\nCollection": "पार्श्वभूमी संग्रह",
@@ -93,8 +93,8 @@
   "Email :": "ई-मेल :",
   "Email": "ई-मेल",
   "English": "इंग्रजी",
-  "Enter the 6-digit OTP here...": " सहा आकड्यांचा ओटीपी इथे लिहा......",
-  "Enter ID here...": "येथे आयडी प्रविष्ट करा...",
+  "Enter the class code here": "येथे वर्ग कोड प्रविष्ट करा",
+  "Enter Student ID here": "येथे विद्यार्थी आयडी प्रविष्ट करा",
   "Ernest makes 5 paper airplanes. Nicole makes 14 paper airplanes. How many fewer paper airplanes does Ernest make than Nicole?": "हरीशने ५ कागदी विमान बनवले. नरेशने १४ कागदी विमान बनवले. नरेशच्या तुलनेत हरीशने किती कागदी विमान कमी बनवले?",
   "Error downloading content. Please connect to internet and try again": " त्रुटिजन्य सामग्री. आंतरजाला शी संबंध जोडा आणि पुन्हा प्रयत्न करा.",
   "EXIT ?": "समाप्त ?",
