Updated otp dialog error Message

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -57,6 +57,7 @@
   "Choose your avatar": "Choose your avatar",
   "Choose Your Language": "Choose Your Language",
   "Class  :": "Class  :",
+  "Class code is invalid or expired": "Class code is invalid or expired",
   "circle": "circle",
   "Click x1 times on number x2!": "Click x1 times on number x2!",
   "code is invalid or expired": "code is invalid or expired",
@@ -117,6 +118,7 @@
   "Instagram": "Instagram",
   "Invalid Email Address": "Invalid Email Address",
   "Invalid Phone Number": "Invalid Phone Number",
+  "Invalid Student ID": "Invalid Student ID",
   "It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?": "It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?",
   "It rained 8 days in January. It rained 9 more days in February than January. How many days did it rain in February?": "It rained 8 days in January. It rained 9 more days in February than January. How many days did it rain in February?",
   "It takes Sally 7 minutes to run a mile. How long would it take her to run 4 miles?": "It takes Asha 7 minutes to run a mile. How long would it take her to run 4 miles?",
@@ -232,6 +234,7 @@
   "Stacie caught 5 fish in the morning. She caught 4 more fish in the afternoon. How many fish did Stacie catch in all?": "Anita caught 5 fish in the morning. She caught 4 more fish in the afternoon. How many fish did Anita catch in all?",
   "stars": "stars",
   "Stringed objects": "Stringed objects",
+  "Student ID is already used": "Student ID is already used",
   "Succession in Shapes": "Succession in Shapes",
   "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": "Shimona found 20 seashells on the beach. Nadira found 6 seashells. How many more seashells did Shimona find than Nadira?",
   "tables": "tables",
