--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -63,6 +63,7 @@
   "Choose Your Language": "अपना भाषा चुनें",
   "circle": "वृत्त",
   "Class  :": "वर्ग  :",
+  "Class code is invalid or expired": "कक्षा कोड अमान्य है या समाप्त हो गया है",
   "Click x1 times on number x2!": "नंबर x2 पर x1 बार क्लिक करें!",
   "cone": "शंकु",
   "code is invalid or expired" : "कोड अमान्य या समाप्त हो गया है",
@@ -129,6 +130,7 @@
   "Instagram": "इंस्टाग्राम",
   "Invalid Email Address": "अमान्य ईमेल पता",
   "Invalid Phone Number": "अमान्य फ़ोन नंबर",
+  "Invalid Student ID": "अमान्य छात्र आईडी",
   "It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?": "मार्च में 15 दिन बारिश हुई।\nअप्रैल में 8 दिन बारिश हुई।\nमार्च में अप्रैल की तुलना में कितने दिन अधिक बारिश हुई?",
   "It rained 8 days in January. It rained 9 more days in February than January. How many days did it rain in February?": "जनवरी में 8 दिन बारिश हुई थी।\nजनवरी की तुलना में फरवरी में 9 और दिनों तक बारिश हुई थी।\nफरवरी में कितने दिन बारिश हुई थी?",
   "It takes Sally 7 minutes to run a mile. How long would it take her to run 4 miles?": "एक किलोमीटर चलाने में सलमा को 7 मिनट लगते हैं।\n4 किलोमीटर चलने में उसे कितना समय लगेगा?",
@@ -248,6 +250,7 @@
   "Story\nReading": "कहानी पढ़ना",
   "Sticker Books": "स्टिकर पुस्तकें",
   "Sticker\nPainting": "स्टिकर पेंटिंग",
+  "Student ID is already used": "छात्र आईडी का पहले ही उपयोग किया जा चुका है",
   "Succession in Shapes": "आकार आयोजन",
   "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": "सौम्या को समुद्र तट पर 20 केकड़े मिले।\nनादिर को 6 केकड़े मिले।\nसौम्या को नादिर की तुलना में कितने अधिक केकड़े मिले?",
   "tables": "टेबल",
