--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -62,6 +62,7 @@
     "Choose your avatar": "ನಿಮ್ಮ ಅವತಾರವನ್ನು ಆರಿಸಿ",
     "Choose Your Language": "ನಿಮ್ಮ ಭಾಷೆಯನ್ನು ಆರಿಸಿ",
     "Class  :": "ವರ್ಗ:",
+    "Class code is invalid or expired": "ವರ್ಗ ಕೋಡ್ ಅಮಾನ್ಯವಾಗಿದೆ ಅಥವಾ ಅವಧಿ ಮೀರಿದೆ",
     "circle": "ವೃತ್ತ",
     "Click x1 times on number x2!": "x2 ನಲ್ಲಿ x1 ಬಾರಿ ಕ್ಲಿಕ್ ಮಾಡಿ!",
     "cone": "ಕೋನ್",
@@ -131,6 +132,7 @@
     "Instagram": "ಇನ್ಸ್ಟಾಗ್ರ್ಯಾಮ್",
     "Invalid Email Address": "ಅಮಾನ್ಯವಾದ ಇಮೇಲ್ ವಿಳಾಸ",
     "Invalid Phone Number": "ಅಮಾನ್ಯ ಫೋನ್ ಸಂಖ್ಯೆ",
+    "Invalid Student ID": "ಅಮಾನ್ಯ ವಿದ್ಯಾರ್ಥಿ ID",
     "It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?": "ಮಾರ್ಚ್ನಲ್ಲಿ 15 ದಿನ ಮಳೆಯಾಯಿತು  ಹಾಗು ಏಪ್ರಿಲ್ನಲ್ಲಿ 8 ದಿನ ಮಳೆಯಾಯಿತು. ಮಾರ್ಚ್ನಲ್ಲಿ ಅಪ್ರಿಲ್ಗಿಂತಲೂ ಎಷ್ಟು ದಿನ ಜಾಸ್ತಿ ಮಳೆ ಆಯಿತು?",
     "It rained 8 days in January. It rained 9 more days in February than January. How many days did it rain in February?": "ಜನವರಿಯಲ್ಲಿ 8 ದಿನ ಮಳೆಯಾಯಿತು ಹಾಗು ಫೆಬ್ರವರಿಯಲ್ಲಿ ಜನವರಿಗಿಂತ 9 ದಿನ ಜಾಸ್ತಿ ಮಳೆಯಾಯಿತು.ಫೆಬ್ರವರಿಯಲ್ಲಿ ಎಷ್ಟು ದಿನ ಮಳೆಯಾಯಿತು?",
     "It takes Sally 7 minutes to run a mile. How long would it take her to run 4 miles?": "ಸ್ಯಾಲಿ 1 ಮೈಲಿ ಓದಲು 7 ನಿಮಿಷ ತಗೊಳುತ್ತಲೇ  ಹಾಗಾದರೆ ಸ್ಯಾಲಿ 4 ಮೈಲಿ ಓದಲು ಎಷ್ಟು ನಿಮಿಷ ತೆಗೆದುಕೊಳ್ಳುತ್ತಾಳೆ ?",
@@ -249,6 +251,7 @@
     "Sticker Books": "ಸ್ಟಿಕ್ಕರ್ ಪುಸ್ತಕಗಳು",
     "Sticker\nPainting": "ಸ್ಟಿಕ್ಕರ್ ಪೇಂಟಿಂಗ್",
     "Stringed objects": "ತಂತಿ ವಸ್ತುಗಳು",
+    "Student ID is already used": "ವಿದ್ಯಾರ್ಥಿ ID ಯನ್ನು ಈಗಾಗಲೇ ಬಳಸಲಾಗಿದೆ",
     "Succession in Shapes": "ಆಕಾರಗಳಲ್ಲಿ ಅನುಕ್ರಮ",
     "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": "ಸಿಡ್ನಿಗೆ  ಸಮುದ್ರತೀರದಲ್ಲಿ 20 ಚಿಪ್ಪುಗಳು   ಸಿಗುತ್ತದೆ .ನೋವಾಗೆ  6 ಚಿಪ್ಪುಗಳು   ಸಿಗುತ್ತದೆ . ನೋವಾಗಿಂತ ಸಿಡ್ನಿಗೆ  ಎಷ್ಟು ಚಿಪ್ಪುಗಳು ಜಾಸ್ತಿ  ಸಿಕ್ಕಿದೆ ?",
     "tables": "ಕೋಷ್ಟಕಗಳು",
