--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -62,6 +62,7 @@
   "Choose your avatar": "तुमचा अवतार निवडा ",
   "Choose Your Language": "तुमची भाषा निवडा ",
   "Class :": "वर्ग :",
+  "Class code is invalid or expired": "वर्ग कोड अवैध आहे किंवा कालबाह्य झाला आहे",
   "circle": "वर्तुळ",
   "Click x1 times on number x2!": " नंबर x2 वर x1 एवढा  वेळा क्लिक करा.",
   "cone": "सुळका ",
@@ -128,6 +129,7 @@
   "Instagram": "इंस्टाग्राम ",
   "Invalid Email Address": "अवैध इ-पत्र पत्ता ",
   "Invalid Phone Number": "अवैध संपर्क क्र. ",
+  "Invalid Student ID": "अवैध विद्यार्थी आयडी",
   "It rained 15 days in March. It rained 8 days in April. How many more days did it rain in March than April?": " मार्चमध्ये पंधरा दिवस पाऊस पडला. एप्रिल मध्ये आठ दिवस पाऊस पडला. तर मार्चमध्ये एप्रिल पेक्षा किती दिवस जास्त पाऊस पडला?",
   "It rained 8 days in January. It rained 9 more days in February than January. How many days did it rain in February?": " जानेवारीमध्ये आठ दिवस पाऊस पडला. फेब्रुवारीमध्ये जानेवारी पेक्षा नऊ दिवस जास्त पाऊस पडला. तर फेब्रुवारीमध्ये किती दिवस पाऊस पडला?",
   "It takes Sally 7 minutes to run a mile. How long would it take her to run 4 miles?": " आशाला एक मैल प्रवासासाठी सात मिनिट लागतात.  तर तिला चार मैल प्रवासासाठी किती वेळ लागेल?",
@@ -244,6 +246,7 @@
   "Sticker Books": "स्टिकर पुस्तके",
   "Sticker\nPainting": "स्टिकर पेंटिंग",
   "Stringed objects": "तंतुवाद्य वस्तु ",
+  "Student ID is already used": "विद्यार्थी आयडी आधीच वापरला आहे",
   "Succession in Shapes": "आकारांमधले उत्तराधिकार",
   "Sydney found 20 seashells on the beach. Noah found 6 seashells. How many more seashells did Sydney find than Noah?": " शिमोना ला समुद्रकिनाऱ्यावर 20 शंख शिंपले सापडली.  नदिरा ला सहा शंख-शिंपले सापडली.  तर  सिमोना ला नदिरा पेक्षा किती शंख-शिंपले जास्त सापडली?",
   "tables": "पाढे",
