Added support for delink of student

--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -300,6 +300,7 @@
   "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?",
   "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?": "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?",
   "Your class code is expired": "Your class code is expired",
+  "You are disconnected or class code is expired": "You are disconnected or class code is expired",
   "Zach has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?": "Sushanth has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?",
   "zero": "zero"
 }
