--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -317,6 +317,7 @@
   "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": "आपके पास 7 गुब्बारे हैं और आपके मित्र के पास 5 गुब्बारे हैं।\nआपके मित्र के तुलना में आपके पास और कितने गुब्बारे हैं?",
   "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?": "आपके पास कुछ स्टांप हैं।\nआपका भाई आपको 6 स्टांप देता है।\nअब आपके पास 10 स्टांप हैं।\nआपने कितने स्टांप के साथ शुरुआत की?",
   "Your class code is expired": "आपका वर्ग कोड समाप्त हो गया है",
+  "You are disconnected or class code is expired": "आप डिस्कनेक्ट हो गए हैं या कक्षा कोड समाप्त हो गया है",
   "Zach has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?": "ज़ाकिर के 17 जन्मदिन उपहार हैं।\n9 तोहफे उसके परिवार के तरफ से हैं और बाकी उसके दोस्तों दी हैं।\nउसके दोस्तों के तरफ से कितने उपहार हैं?",
   "zero": "शून्य"
 }
