--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -317,6 +317,7 @@
     "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": "ನಿಮ್ಮ ಬಳಿ  7 ಬಲೂನ್ ಗಳಿವೆ ಹಾಗು ನಿಮ್ಮ ಗೆಳೆಯನ ಬಳಿ 5 ಬಲೂನ್ ಗಳಿವೆ. ನಿಮ್ಮ ಗೆಳೆಯನಿಗಿಂತ ನಿಮ್ಮ ಬಳಿ ಎಷ್ಟು ಬಲೂನ್ ಜಾಸ್ತಿ ಇದೆ?",
     "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?": "ನಿಮ್ಮ ಬಳಿ ಕೆಲವು ನಾಣ್ಯಗಳಿವೆ. ನಿಮ್ಮ ಸಹೋದರ ನಿಮಗೆ 6 ನಾಣ್ಯವನ್ನು ಕೊಡುತ್ತಾನೆ. ಈಗ ನಿಮ್ಮ ಬಳಿ 10 ನಾಣ್ಯಗಳಿವೆ?",
     "Your class code is expired": "ನಿಮ್ಮ ವರ್ಗ ಕೋಡ್ ಅವಧಿ ಮೀರಿದೆ",
+    "You are disconnected or class code is expired": "ನೀವು ಸಂಪರ್ಕ ಕಡಿತಗೊಂಡಿದ್ದೀರಿ ಅಥವಾ ವರ್ಗ ಕೋಡ್ ಅವಧಿ ಮೀರಿದೆ",
     "Zach has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?": "ಝಾಕ್ 17 ಹುಟ್ಟುಹಬ್ಬದ ಉಡುಗೊರೆಗಳನ್ನು ಹೊಂದಿದ್ದಾರೆ.9 ಉಡುಗೊರೆಗಳು ಅವನ ಕುಟುಂಬದಿಂದ ಬಂದವು ಮತ್ತು ಉಳಿದವುಗಳು ಅವನ ಸ್ನೇಹಿತರಿಂದ ಬಂದವು.ಅವನ ಸ್ನೇಹಿತರಿಂದ ಎಷ್ಟು ಉಡುಗೊರೆಗಳಿವೆ?",
     "zero": "ಶೂನ್ಯ"
 }
