--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -311,6 +311,7 @@
   "You and your sister share 10 bags of chips equally. How many bags of chips will each of you get?": " तू आणि तुझ्या बहिणीने 10 चिप्सच्या पिशव्या एकसमान वाटून घेतल्या.  तर प्रत्येकीच्या वाट्याला किती पिशव्या आल्या?",
   "You have 7 balloons and your friend has 5 balloons. How many more balloons do you have than your friend?": " तुझ्याकडे सात फुगे आहेत आणि तुझ्या मित्राकडे 5 फुगे आहेत.  तर तुझ्याकडे तुझ्या मित्रापेक्षा किती जास्त  फुगे आहेत ?",
   "You have some stamps. Your brother gives 6 stamps to you. Now you have 10 stamps. How many stamps did you start with?": " तुझ्याकडे काही शिक्के आहेत.  तुझ्या भावाने तुला  सहा अजून  शिके दिले.  आता तुझ्याकडे दहा शिक्के आहेत.  तर सुरुवातीला तुझ्याकडे किती शिक्के होते ?",
+  "You are disconnected or class code is expired": "तुम्ही डिस्कनेक्ट झाला आहात किंवा वर्ग कोड कालबाह्य झाला आहे",
   "Zach has 17 birthday gifts. 9 gifts are from his family and the rest are from his friends. How many gifts are from his friends?": " सुशांत कडे सतरा वाढदिवसाच्या भेटवस्तू आहेत त्यातील नऊ भेटवस्तू त्याच्या परिवाराने त्याला दिल्या आणि उरलेल्या भेटवस्तू त्याच्या मित्रांनी दिल्या तर त्यातील किती भेटवस्तू त्याच्या मित्रांनी दिल्या?",
   "zero": "शून्य"
 }
