Name change in popup from phone number to student ID

--- a/assets/resources/lang/hi/i18n.json
+++ b/assets/resources/lang/hi/i18n.json
@@ -159,7 +159,7 @@
   "Login to your school": "अपने स्कूल में लॉगिन करें",
   "Logout": "लॉग आउट",
   "Remember logged in user": "लॉग इन उपयोगकर्ता याद रखें",
-  "Re-Connect to your class using phone number": "फ़ोन नंबर का उपयोग करके अपनी कक्षा से पुनः कनेक्ट करें",
+  "Re-Connect to your class using Student ID": "छात्र आईडी का उपयोग करके अपनी कक्षा से पुनः कनेक्ट करें",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?": "लतिका के पास 8 पेंसिल हैं।\nवह उनमें से 7 पेंसिल खो देती है।\nलतिका के पास कितने पेंसिल बचे हैं?",
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?": "लतिका 9 साल की है।\nउसकी बहन जूली  6 साल की है।\nलतिका अपनी बहन जूली से कितनी बड़ी है?",
   "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?": "मीना ने 8 कैंडी खरीदी और जय ने 9 कैंडी खरीदी।\nउन्होंने सभी में कितने कैंडी खरीदे?",
