--- a/assets/resources/lang/kn/i18n.json
+++ b/assets/resources/lang/kn/i18n.json
@@ -212,7 +212,7 @@
     "Profile": "ವಿವರ",
     "Puzzle": "ಪಜಲ್",
     "Rectangle": "ಆಯಾತ",
-    "Re-Connect to your class using phone number": "ಫೋನ್ ಸಂಖ್ಯೆಯನ್ನು ಬಳಸಿಕೊಂಡು ನಿಮ್ಮ ತರಗತಿಗೆ ಮರು-ಸಂಪರ್ಕಿಸಿ",
+    "Re-Connect to your class using Student ID": "ವಿದ್ಯಾರ್ಥಿ ID ಬಳಸಿಕೊಂಡು ನಿಮ್ಮ ತರಗತಿಗೆ ಮರುಸಂಪರ್ಕಿಸಿ",
     "Remove Teacher?": "ಶಿಕ್ಷಕನನ್ನು ತೆಗೆದುಹಾಕಿ?",
     "Remove User?": "ಬಳಕೆದಾರನನ್ನು ತೆಗೆದುಹಾಕಿ?",
     "Report": "ವರದಿ",
