--- a/assets/resources/lang/mr/i18n.json
+++ b/assets/resources/lang/mr/i18n.json
@@ -208,7 +208,7 @@
   "Profile": "पार्श्विका ",
   "Puzzle": "कोडे",
   "Rectangle": "आयत",
-  "Re-Connect to your class using phone number": "फोन नंबर वापरून तुमच्या वर्गाशी पुन्हा कनेक्ट करा",
+  "Re-Connect to your class using Student ID": "विद्यार्थी आयडी वापरून तुमच्या वर्गाशी पुन्हा कनेक्ट करा",
   "Remove Teacher?": "शिक्षकांना काढू इच्छिता?",
   "Remove User?": "उपभोक्त्याला काढू इच्छिता ?",
   "Report": "अहवाल",
