--- a/assets/resources/lang/en/i18n.json
+++ b/assets/resources/lang/en/i18n.json
@@ -147,7 +147,7 @@
   "Login to your school": "Login to your school",
   "Logout": "Logout",
   "Remember logged in user": "Remember logged in user",
-  "Re-Connect to your class using phone number": "Re-Connect to your class using phone number",
+  "Re-Connect to your class using Student ID": "Re-Connect to your class using Student ID",
   "Lucy has 8 pencils. She loses 7 of them. How many pencils does Lucy have left?": "Leela has 8 pencils. She loses 7 of them. How many pencils does Leela have left?",
   "Lucy is 9 years old. Her sister Julie is 6 years old. How much older is Lucy than her sister Julie?": "Leela is 9 years old. Her sister Julie is 6 years old. How much older is Leela than her sister Julie?",
   "Magan bought 8 candies and Jane bought 9 candies. How many candies did they buy in all?": "Sudha bought 8 candies and Jaya bought 9 candies. How many candies did they buy in all?",
